ntfy/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  labels:
    component: app
spec:
  revisionHistoryLimit: 1
  replicas: 1
  selector:
    matchLabels:
      component: app
  template:
    metadata:
      labels:
        component: app
    spec:
      containers:
        - name: app 
          image: binwiederhier/ntfy:v2.11.0
          args: ["serve"]
          ports: 
            - containerPort: 80
          volumeMounts:
            - mountPath: /etc/ntfy/server.yml
              subPath: server.yml
              name: config-volume
            - mountPath: /var/cache/ntfy
              name: cache-volume
      volumes:
        - name: config-volume
          configMap:
            name: server-config
        - name: cache-volume
          persistentVolumeClaim:
            claimName: app-pvc
