ntfy/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: app 
  labels:
    component: app
spec:
  type: ClusterIP
  selector:
    component: app
  ports:
    - port: 80
